# LumioV2_Hardware

./: CNAME  LumioV2.kicad_pcb  LumioV2.kicad_prl  LumioV2.kicad_pro  LumioV2.kicad_sch  README.md  fp-info-cache  freerouting.dsn  lumio-v2-docs.html  temp-freerouting.dsn
Docs/: LumioV2_Presentation.pptx  LumioV2_Project_Report_v2.docx  Sameed_Internship_Report.docx  SonyTech-Sameed-Daily_Diary_Updated.docx  SonyTech_Internship_FieldReport_TVA.pptx
Hardware/: LumioV2.kicad_pcb  LumioV2.kicad_prl  fp-info-cache
Hardware/bom/: ibom.html
Libs/: SMD4_ECS-2520MV_ECS.step
software/lumio/: README.md  lumio.service  pyproject.toml
software/lumio-rp2040/: README.md  main.py  pin_manager.py  protocol.py
software/lumio/lumio/: __init__.py  adc.py  config.py  coprocessor.py  main.py  robot.py  web.py  wifi_provision.py
software/lumio/templates/: control.html  gpio.html
